--- a/01.Introduction and Context/01_Introduction-and-Context/1.1_Executive-Summary.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.1_Executive-Summary.md
@@ -1,24 +1,23 @@
 # Executive Summary 
 
-The Centre Hospitalier Régional de Bruxelles (CHR) is undertaking a strategic digital transformation to modernize its Identity and Access Management (IAM) ecosystem and strengthen the security of patient and operational data.
+The Brussels Regional Hospital Center (CHR) is embarking on a strategic digital transformation to modernize its Identity and Access Management (IAM) ecosystem, enhancing the security of patient and operational data while ensuring compliance with stringent European and Belgian regulations including GDPR, NIS2, ISO 27001, ISO 27799, and eHealth Belgium directives. 
 
-With the increasing complexity of healthcare IT environments, managing user identities and access rights across multiple clinical and administrative systems such as OASIS+, QBLOC, and DXPlanning has become a significant challenge. In addition, the hospital must comply with stringent European and Belgian regulations, including GDPR, NIS2, ISO 27001, ISO 27799, and eHealth Belgium directives.
+With the increasing complexity of clinical and administrative systems such as OASIS+, QBLOC, and DXPlanning, managing user identities and access rights has become a critical challenge. To address this, CHR has initiated an IAM modernization program centered on three core solutions:
 
-To address these challenges, the CHR has launched an IAM modernization program built around three core solutions:
+- **SailPoint (IGA)** : automates identity lifecycle management, enforces role-based access control, and provides governance and audit capabilities,
+- **Okta (IDP)** delivers secure authentication, single sign-on (SSO), and adaptive multi-factor authentication (MFA),
+- **Wallix (PAM)** manages and monitors privileged accounts ensuring full traceability and compliance for critical administrative access.
 
-- **SailPoint (IGA)** to automate the identity lifecycle, enforce role-based access control, and provide governance and audit capabilities;
-- **Okta (IDP)** to deliver secure authentication, single sign-on (SSO), and adaptive multi-factor authentication (MFA);
-- **Wallix (PAM)** to manage and monitor privileged accounts, enabling full traceability and compliance for critical administrative access.
+This program follows the Zero Trust model principles, ensuring that no user or system is inherently trusted and all access requests are verified, contextualized, and auditable.
 
-This program is designed following the principles of the Zero Trust model, ensuring that no user or system is inherently trusted and that every access request is verified, contextual, and auditable.
+Key objectives include:
 
-The initiative aims to:
-
-- Automate onboarding and offboarding processes based on HR data from ULIS and Foederis, reducing manual workload and human error;
-- Secure access to critical healthcare systems with strong authentication and least-privilege principles;
-- Enhance regulatory compliance and simplify audit preparation through centralized governance and continuous monitoring;
-- Support patient journey optimization by improving the reliability and timeliness of access to digital healthcare systems.
+- Automating onboarding and offboarding processes leveraging HR data from ULIS and Foederis to reduce manual workload and human error,
+- Securing critical healthcare system access through strong authentication and least privilege principles, 
+- Enhancing regulatory compliance and simplifying audit preparation via centralized governance and continuous monitoring,
+- Supporting patient journey optimization by improving the reliability and timeliness of access to digital healthcare systems.
 
 Through this implementation, CHR Brussels positions itself as a leader in cyber-resilient healthcare operations, aligning patient care excellence with data protection and European digital sovereignty principles.
 
-The following documentation details the project’s business requirements, target architecture, use cases, and governance framework, all designed from the perspective of an IAM Business Analyst leading the coordination between HR, IT, and Compliance teams.
+This documentation provides detailed business requirements, target architecture, use cases, and governance framework from the perspective of an IAM Business Analyst coordinating HR, IT, and Compliance teams.
+
