--- a/01.Introduction and Context/01_Introduction-and-Context/1.1_Executive-Summary.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.1_Executive-Summary.md
@@ -19,5 +19,5 @@ Key objectives include:
 
 Through this implementation, CHR Brussels positions itself as a leader in cyber-resilient healthcare operations, aligning patient care excellence with data protection and European digital sovereignty principles.
 
-This documentation provides detailed business requirements, target architecture, use cases, and governance framework from the perspective of an IAM Business Analyst coordinating HR, IT, and Compliance teams.
+This documentation provides detailed business requirements, target architecture, use cases, and governance framework from the perspective of an IAM Consultant coordinating HR, IT, and Compliance teams.
 
