--- a/01.Introduction and Context/01_Introduction-and-Context/1.5_Project-Assumptions.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.5_Project-Assumptions.md
@@ -17,10 +17,9 @@
 ## Organizational Assumptions
 - Executive management validates the IAM roadmap and governance model.
 - HR and IT departments collaborate closely for identity lifecycle synchronization.
-- A dedicated IAM Business Analyst oversees the end-to-end process documentation.
+- A dedicated IAM Consultant oversees the end-to-end process documentation.
 - End users will participate in MFA adoption and access certification campaigns.
 
 ## Risk-Based Assumptions
-If any of these assumptions fail (e.g., unstable API integration or incomplete HR data),  
-the IAM scope and timelines may be adjusted through a Change Control process.
+If any of these assumptions fail (e.g., unstable API integration or incomplete HR data), the IAM scope and timelines may be adjusted through a Change Control process.
 
