Update 1.5 Stakeholders and roles.md

--- a/01.Introduction and Context/01_Introduction-and-Context/1.5 Stakeholders and roles.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.5 Stakeholders and roles.md
@@ -1,1 +1,37 @@
+# Stakeholders & Roles
+Successful implementation of the IAM ecosystem at CHR Brussels requires the involvement and collaboration of diverse stakeholders across clinical, administrative, IT, and compliance domains. Below are the key stakeholders and their responsibilities in this project :
+
+- **Executive Management**
+Provides strategic direction, approves budget, and ensures alignment with organizational goals and regulatory requirements.
+
+- **Project Sponsor (e.g., CIO/CTO)**
+Champions the project internally, allocates resources, and ensures interdepartmental coordination.
+
+- **IAM Business Analyst / Functional Consultant**
+Acts as the liaison between business units and technical teams, gathering requirements, defining business processes, and ensuring alignment with compliance and governance.
+
+- **IT Department**
+Oversees technical implementation, system integration, and ongoing operational support of the IAM components (IGA, IDP, PAM).
+
+   - IAM Solution Architect: Designs the target architecture respecting Zero Trust principles.
+
+   - Application Managers: Manage integration and user provisioning for clinical systems (DXPlanning, QBLOC, OASIS+).
+
+   - Helpdesk Team: Provides end-user support and manages access incidents.
+
+- **Human Resources**
+Supplies critical identity data via HRIS (ULIS, Foederis), manages employee lifecycle data, and collaborates in defining roles and access rights.
+
+- **Compliance and Security Officers**
+Define policies and monitor adherence to GDPR, ISO standards, NIS2, and healthcare-specific regulations ensuring audit readiness and risk mitigation.
+
+- **Clinical Staff and End Users**
+Includes physicians, nurses, and administrative personnel who require seamless and secure access to systems supporting patient care.
+
+- **External Partners and Consultants**
+International consulting firm providing project management, security expertise, and ensuring best practices throughout the IAM implementation lifecycle.
+
+- **Audit and Risk Management**
+Conducts periodic reviews of access governance, SoD enforcement, and privileged access activities to validate controls and compliance.
+
 
