Update 2.1 Kickoff meeting.md

--- a/02.Requirements Gathering /2.1 Kickoff meeting.md
+++ b/02.Requirements Gathering /2.1 Kickoff meeting.md
@@ -4,7 +4,7 @@
 This kick-off meeting is initiated by the **IT Security Department of CHR Brussels**, under the sponsorship of the **Chief Information Officer (CIO)**.  
 The hospital has mandated an external **consulting firm specialized in Identity and Access Management (IAM)** to support the design and implementation of its future IAM ecosystem.
 
-The goal of this collaboration is to secure day-to-day clinical operations along the **patient journey**, while aligning with European and Belgian healthcare compliance frameworks (GDPR, NIS2, ISO 27001, ISO 27799, eHealth Belgium).  
+The goal of this collaboration is to implement an **Identity Governance and Administration (IGA)** solution to automate and secure identity lifecycle management, thereby enhancing the security of day-to-day clinical operations along the patient journey through the deployment of an integrated **Identity Provider (IDP)** and **Privileged Access Management (PAM)** system, while ensuring alignment with European and Belgian healthcare compliance frameworks (GDPR, NIS2, ISO 27001, ISO 27799, and eHealth Belgium). 
 
 Currently, CHR Brussels does not operate a centralized IAM capability. User access to critical systems such as **DXPlanning** (patient scheduling), **QBLOC** (surgery block management), and **OASIS+** (electronic medical record) is managed manually.  
 This fragmented approach generates major operational and security risks:
