--- a/02.Requirements Gathering /2.1 Kickoff meeting.md
+++ b/02.Requirements Gathering /2.1 Kickoff meeting.md
@@ -7,14 +7,25 @@ The hospital has mandated an external **consulting firm specialized in Identity 
 The goal of this collaboration is to implement an **Identity Governance and Administration (IGA)** solution to automate and secure identity lifecycle management, thereby enhancing the security of day-to-day clinical operations along the patient journey through the deployment of an integrated **Identity Provider (IDP)** and **Privileged Access Management (PAM)** system, while ensuring alignment with European and Belgian healthcare compliance frameworks (GDPR, NIS2, ISO 27001, ISO 27799, and eHealth Belgium). 
 
 Currently, CHR Brussels does not operate a centralized IAM capability. User access to critical systems such as **DXPlanning** (patient scheduling), **QBLOC** (surgery block management), and **OASIS+** (electronic medical record) is managed manually.  
-This fragmented approach generates major operational and security risks:
-- Inconsistent onboarding and offboarding,
-- Lack of authentication control,
-- Limited audit and traceability,
-- Non-compliance with data protection standards.
+This fragmented approach generates major operational, security, and compliance risks, including:
 
-To address these issues, the CIO has established an **IAM Core Team**, composed of external IAM consultants from the selected consulting firm.  
-This multidisciplinary team combines business, architectural, and technical expertise to deliver the first structured phase of the project, the **Business Requirements Document (BRD) v0.1**.
+- Inconsistent onboarding and offboarding processes leading to orphan and excessive access,
+- Lack of strong authentication controls such as multi-factor authentication,
+- Limited auditability and traceability of user actions and privileged access,
+- Non-compliance with healthcare data protection standards, notably ISO 27799.
+
+Specific risks as per ISO 27799 include:
+
+- Unauthorized use of health information applications,
+- User errors affecting data integrity or access controls,
+- Masquerade attacks or impersonation by insiders,
+- Repudiation risks where actions may be denied or disputed,
+- Interception or eavesdropping on communications,
+- Operational errors impacting system security or data availability.
+
+These risks highlight the critical need for a robust IAM ecosystem with comprehensive governance, strong authentication, continuous monitoring, and audit capabilities to safeguard patient data and comply with regulatory requirements.
+
+To address these issues, the CIO has established an **IAM Core Team**, composed of external IAM consultants from the selected consulting firm.This multidisciplinary team combines business, architectural, and technical expertise to deliver the first structured phase of the project, the **Business Requirements Document (BRD) v0.1**.
 
 ---
 
@@ -33,17 +44,13 @@ The **objective of this meeting** is to align all stakeholders and formally init
 The consulting team conducted a pre-study to evaluate several IAM vendors and selected the following combination for their maturity, interoperability, and healthcare compliance capabilities:
 
 - **SailPoint (IGA)**  
-  Provides a robust Identity Governance and Administration layer for automated provisioning, deprovisioning, and role-based access control.  
-  SailPoint’s native connectors and governance capabilities make it ideal for HR-driven environments like hospitals, where user lifecycle changes (new hires, rotations, contract ends) are frequent and need to be auditable.
+  Provides a robust Identity Governance and Administration layer for automated provisioning, deprovisioning, and role-based access control. SailPoint’s native connectors and governance capabilities make it ideal for HR-driven environments like hospitals, where user lifecycle changes (new hires, rotations, contract ends) are frequent and need to be auditable.
 
 - **Okta (IDP)**  
-  Serves as the central authentication layer for Single Sign-On (SSO) and Multi-Factor Authentication (MFA).  
-  Okta’s adaptive access policies and integration with modern protocols (SAML, OIDC) align perfectly with the hospital’s need for secure, seamless access across DXPlanning, QBLOC, and OASIS+.  
-  It ensures fast yet secure authentication, essential in clinical contexts where staff mobility and rapid access are critical.
+  Serves as the central authentication layer for Single Sign-On (SSO) and Multi-Factor Authentication (MFA). Okta’s adaptive access policies and integration with modern protocols (SAML, OIDC) align perfectly with the hospital’s need for secure, seamless access across DXPlanning, QBLOC, and OASIS+. It ensures fast yet secure authentication, essential in clinical contexts where staff mobility and rapid access are critical.
 
 - **Wallix (PAM)**  
-  Selected as the Privileged Access Management solution due to its European origin, strong compliance alignment (NIS2, ISO 27001), and proven reliability in healthcare and public sectors.  
-  Wallix provides session recording, vaulted credential management, and full accountability for administrative operations — ensuring auditability and sovereignty over privileged access.
+  Selected as the Privileged Access Management solution due to its European origin, strong compliance alignment (NIS2, ISO 27001), and proven reliability in healthcare and public sectors. Wallix provides session recording, vaulted credential management, and full accountability for administrative operations, ensuring auditability and sovereignty over privileged access.
 
 Together, these three solutions form a **Zero Trust IAM framework** that enforces:
 - Continuous verification of user identity,
