Update 2.2 Stakeholder Register.md

--- a/02.Requirements Gathering /2.2 Stakeholder Register.md
+++ b/02.Requirements Gathering /2.2 Stakeholder Register.md
@@ -5,7 +5,7 @@ The stakeholder register identifies all key participants involved in the **CHR B
 This register ensures clarity on each stakeholder’s **role, influence, interest, and responsibilities** throughout the project lifecycle.
 
 The IAM initiative is a **joint effort between CHR Brussels and an external consulting firm** specializing in Identity and Access Management (IAM).  
-The consulting firm provides a **Core IAM Team** composed of a Business Analyst, an IAM Architect, and a Solution Architect — all working closely with the hospital’s IT, HR, and compliance departments.
+The consulting firm provides a **Core IAM Team** composed of a Business Analyst, an IAM Architect, and a Solution Architect, all working closely with the hospital’s IT, HR, and compliance departments.
 
 Effective stakeholder alignment is essential for producing a coherent **Business Requirements Document (BRD v0.1)** and achieving the program’s strategic objectives: regulatory compliance, Zero Trust adoption, and secure patient data management.
 
@@ -26,7 +26,7 @@ Effective stakeholder alignment is essential for producing a coherent **Business
 | **Compliance & Legal** | **Data Protection Officer (DPO)** | Compliance Lead | Ensures GDPR, ISO 27799, and eHealth Belgium alignment. | High | High | Compliance checkpoints and validation sign-offs. |
 | **IT Infrastructure** | **System & Network Lead** | IT Ops | Prepares environments, ensures readiness for IAM tools deployment. | Medium | Medium | Technical follow-up and environment readiness meetings. |
 | **End-User Representatives** | **Administrative Staff Delegate** | Reception / Admissions | Provides operational feedback on IAM usability and workflow impact. | Low | High | Pilot user testing, communication sessions. |
-| **Medical Staff Representative** | **Clinical Users Delegate** | Physicians / Surgeons | Validates SSO and MFA usability in clinical context. | Medium | High | Focus groups, feedback loops during testing phase. |
+| **Medical Staff Representative** | **Clinical Users Delegate** | Physicians / Surgeons/ anesthetist | Validates SSO and MFA usability in clinical context. | Medium | High | Focus groups, feedback loops during testing phase. |
 | **Vendors / Technology Partners** | **SailPoint, Okta, Wallix Representatives** | Product Experts | Provide best practices, technical support, and solution-specific expertise. | Medium | Medium | Bi-weekly coordination calls and integration support. |
 
 ---
