Update 1.6 Project timeline.md

--- a/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
@@ -27,7 +27,7 @@ The timeline below assumes a progressive rollout:
 - Drafting of BRD v0.1.
 
 **Key Deliverables:**
-- [2.1_BRD-Kick-off-Meeting](../02.20%Phase20%120%-20%Alaysis20%and20%definition/2.120%Kickoff20%meeting.md)  
+- [2.1_BRD-Kick-off-Meeting](../02.Phase20%120%-20ùAnalysis20%and20%definition/2.120%Kickoff20%meeting.md)
 - 2.2_Stakeholder-Register.md  
 - 2.3_RACI-Matrix.md  
 - 3.1_Business-Drivers-and-Problem-Statement.md  
