--- a/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
@@ -28,7 +28,7 @@ The timeline below assumes a progressive rollout:
 
 **Key Deliverables:**
 - [2.1 BRD Kick-off Meeting](../02_Phase_1_Analysis_and_Definition/2.1_BRD-Kick-off-Meeting.md)
-- 2.2_Stakeholder-Register.md  
+- [2.2 Stakeholder Register](../02_Phase_1_Analysis_and_Definition/2.2_Stakeholder-Register.md)
 - 2.3_RACI-Matrix.md  
 - 3.1_Business-Drivers-and-Problem-Statement.md  
 - 3.2_Risk-and-Impact-Analysis.md  
