--- a/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
@@ -27,7 +27,7 @@ The timeline below assumes a progressive rollout:
 - Drafting of BRD v0.1.
 
 **Key Deliverables:**
-- [2.1 Kick-off Meeting](../02.%20Phase%201%20-%20Analysis%20and%20Definition/2.1%20Kickoff%20meeting.md)
+- [2.1 Kick-off Meeting](../02.%20Phase%201%20-%20Analysis%20and%20definition/2.1%20Kickoff%20meeting.md)
 - [2.2 Stakeholder Register](../02_Phase_1_Analysis_and_Definition/2.2_Stakeholder-Register.md)
 - 2.3_RACI-Matrix.md  
 - [3.1 Business Drivers](../03_Phase_2_Design/3.1_Business-Drivers-and-Problem-Statement.md)
