Update 1.6 Project timeline.md

--- a/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
@@ -29,9 +29,9 @@ The timeline below assumes a progressive rollout:
 **Key Deliverables:**
 - 2.1 Kickoff Meeting
 - 2.2 Stakeholder Register
-- 2.3_RACI-Matrix.md  
+- 2.3 RACI matrix  
 - 3.1 Business Drivers
-- 3.2_Risk-and-Impact-Analysis.md  
+- 3.2 Risk and Impact Analysis  
 - **BRD_V01.md (draft)**
 
 ---
