--- a/02. Phase 1 - Analysis and definition/2.9.9 Business-Requirements-Matrix.md
+++ b/02. Phase 1 - Analysis and definition/2.9.9 Business-Requirements-Matrix.md
@@ -15,7 +15,7 @@ Each requirement ensures secure, compliant, and traceable management of identiti
 | **BR-003** | Appointment Scheduling / Inter-System Communication | DXPlanning ↔ OASIS+ ↔ QBLOC | All service accounts used for HL7 data exchanges between hospital systems (DXPlanning, OASIS+, QBLOC) must be vaulted and monitored within Wallix PAM to ensure credential protection, traceability, and prevention of unauthorized access. | Wallix (PAM) | ISO 27001 A.9.2.3 – Management of privileged access credentials | R-001 |
 | **BR-004** | Patient Admission | OASIS+ | Reception staff can only view fields relevant to admission and consent verification. | SailPoint (IGA) | GDPR Art.5 – Data Minimization | R-003 |
 | **BR-005** | Patient Admission | OASIS+ | Access to patient records requires contextual authentication (location, device, and time). | Okta (IDP) | NIS2 – Context-Aware Access | R-003 |
-| **BR-006** | Surgery Planning | QBLOC | Only surgeons and chiefs of service can approve or modify surgery schedules. Delegations must be traceable. | SailPoint (IGA) | ISO 27001 A.9.4.3 – Access Control | R-004 |
+| **BR-006** | Surgery Planning | QBLOC | Only surgeons, anesthetist & chiefs of service can approve or modify surgery schedules. Delegations must be traceable. | SailPoint (IGA) | ISO 27001 A.9.4.3 – Access Control | R-004 |
 | **BR-007** | Surgery Planning | QBLOC | All privileged operations in QBLOC must be session-recorded and auditable. | Wallix (PAM) | ISO 27001 A.12.4 – Event Logging | R-004 |
 | **BR-008** | Prescription Management | ePrescription / eHealth | Before any electronic prescription is issued, the practitioner must verify the patient’s therapeutic link via the patient’s eID card. Okta (IDP) must orchestrate this authentication step with the eHealth platform to ensure strong identity binding and non-repudiation. The final prescription must be digitally signed using the practitioner’s eID or eHealth certificate. | Okta (IDP) + SailPoint (IGA) + Wallix (PAM backend) | eHealth Belgium Framework, GDPR (Art.32 Integrity & Non-repudiation), ISO 27799 | R-005 |
 | **BR-009** | Prescription Management | ePrescription / eHealth | All privileged API and backend systems managing prescription data must be accessed only via vaulted, traceable privileged accounts. | Wallix (PAM) | NIS2 Annex I, ISO 27001 A.9.2.6 | R-005 |
