Update 1.6 Project timeline.md

--- a/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.6 Project timeline.md
@@ -14,7 +14,7 @@ The timeline below assumes a progressive rollout:
 4. Go-Live Preparation
 5. Handover & Governance
 
-## High-Level Timeline (Indicative)
+## High-Level Timeline 
 
 ### Phase 1 — Analysis & Definition  
 **Duration:** Week 1 → Week 4  
