Update 2.2 Stakeholder Register.md

--- a/02. Phase 1 - Analysis and definition/2.2 Stakeholder Register.md
+++ b/02. Phase 1 - Analysis and definition/2.2 Stakeholder Register.md
@@ -26,7 +26,7 @@ Effective stakeholder alignment is essential for producing a coherent **Business
 | **Compliance & Legal** | **Data Protection Officer (DPO)** | Compliance Lead | Ensures GDPR, ISO 27799, and eHealth Belgium alignment. | High | High | Compliance checkpoints and validation sign-offs. |
 | **IT Infrastructure** | **System & Network Lead** | IT Ops | Prepares environments, ensures readiness for IAM tools deployment. | Medium | Medium | Technical follow-up and environment readiness meetings. |
 | **End-User Representatives** | **Administrative Staff Delegate** | Reception / Admissions | Provides operational feedback on IAM usability and workflow impact. | Low | High | Pilot user testing, communication sessions. |
-| **Medical Staff Representative** | **Clinical Users Delegate** | Physicians / Surgeons/ anesthetist | Validates SSO and MFA usability in clinical context. | Medium | High | Focus groups, feedback loops during testing phase. |
+| **Medical Staff Representative** | **Clinical Users Delegate** | Physicians / Surgeons/ anesthetist / Nurse / Room coordinator | Validates SSO and MFA usability in clinical context. | Medium | High | Focus groups, feedback loops during testing phase. |
 | **Vendors / Technology Partners** | **SailPoint, Okta, Wallix Representatives** | Product Experts | Provide best practices, technical support, and solution-specific expertise. | Medium | Medium | Bi-weekly coordination calls and integration support. |
 
 ---
