--- a/02. Phase 1 - Analysis and definition/2.5 Business-Drivers-and-Problem-statement.md
+++ b/02. Phase 1 - Analysis and definition/2.5 Business-Drivers-and-Problem-statement.md
@@ -18,7 +18,7 @@ As clinical services scale and staffing models become more dynamic (rotation, on
 The hospital currently faces the following structural issues:
 
 - **No end-to-end identity lifecycle control**  
-  User accounts are created and modified on demand. Accounts are often not revoked on time when a contract ends or a function changes.
+   Clinical user accounts are created and modified on demand. Accounts are often not revoked on time when a contract ends or a function changes. For administrative staff roles, user accounts are shared. 
 
 - **Lack of consistent access policies across systems**  
   DXPlanning, QBLOC, and OASIS+ each apply their own logic for roles and permissions. There is no global view of “who has access to what, and why”.
