Update 2.1.0 Project Charter framing and BRD draft meeting.md

--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.0 Project Charter framing and BRD draft meeting.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.0 Project Charter framing and BRD draft meeting.md
@@ -1,1 +1,39 @@
+# Context 
 
+This first meeting is initiated by the IT Security Department of CHR Brussels, under the sponsorship of the Chief Information Officer (CIO), and facilitated by the Project Manager.
+
+It gathers a multidisciplinary team including the IAM Architect, IAM Solution Architect, Business Analyst Consultant, and representatives from Legal/Compliance (DPO) and Human Resources, combining business, technical, legal, and architectural expertise.
+
+The meeting serves two main purposes: reviewing the pentester report from business and security perspectives, and commencing the drafting of key project documents, the Project Charter and draft Business Requirements Document (BRD).
+
+The CIO presents the pentest results, highlighting major operational, security, and compliance risks and the urgent need for a robust IAM ecosystem ensuring governance, strong authentication, continuous monitoring, and audit capability to protect patient data and ensure regulatory compliance.
+
+The IAM Architect and Solution Architect provide a macro and micro technical analysis, proposing solutions to interoperability and compliance challenges specific to the healthcare sector. The Business Analyst articulates strategy and detailed functional requirements.
+
+Main topics include:
+
+- Business drivers and problem statement
+
+- IAM mapping solution
+
+- Business requirement matrix
+
+- Risk and impact analysis
+
+- Risk matrix visualization
+
+- Project timeline
+
+- Success criteria
+
+- IAM success metrics
+
+- Stakeholder register
+
+- Communication plan
+
+- RACI matrix
+
+The following sections will detail the topics discussed and the decisions made during this first meeting. They will also serve as annexed documents to the BRD, ensuring comprehensive documentation and traceability of the project’s requirements and governance decisions throughout its lifecycle.
+
+Additionally, a second meeting, referred to as the "Kickoff Meeting," will be organized to validate and formally sign off on the Project Charter and the first version of the Business Requirements Document (BRD V01).
