Update 2.1.0 Project Charter framing and BRD draft meeting.md

--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.0 Project Charter framing and BRD draft meeting.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.0 Project Charter framing and BRD draft meeting.md
@@ -1,4 +1,5 @@
-# Context 
+# Project Charter framing and BRD draft meeting
+## Context 
 
 This first meeting is initiated by the IT Security Department of CHR Brussels, under the sponsorship of the Chief Information Officer (CIO), and facilitated by the Project Manager.
 
@@ -13,27 +14,17 @@ The IAM Architect and Solution Architect provide a macro and micro technical ana
 Main topics include:
 
 - Business drivers and problem statement
-
 - IAM mapping solution
-
 - Business requirement matrix
-
 - Risk and impact analysis
-
 - Risk matrix visualization
-
 - Project timeline
-
 - Success criteria
-
 - IAM success metrics
-
 - Stakeholder register
-
 - Communication plan
-
 - RACI matrix
 
 The following sections will detail the topics discussed and the decisions made during this first meeting. They will also serve as annexed documents to the BRD, ensuring comprehensive documentation and traceability of the project’s requirements and governance decisions throughout its lifecycle.
 
-Additionally, a second meeting, referred to as the "Kickoff Meeting," will be organized to validate and formally sign off on the Project Charter and the first version of the Business Requirements Document (BRD V01).
+Additionally, a second meeting, referred to as the "Kickoff Meeting," will be organized to validate and formally sign off on the Project Charter and the first version of the Business Requirements Document (BRD V01).These initial versions can be expanded upon and validated during the kick-off meeting. 
