Update 2.1.0 Project Charter framing and BRD draft meeting.md

--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.0 Project Charter framing and BRD draft meeting.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.0 Project Charter framing and BRD draft meeting.md
@@ -1,5 +1,5 @@
 # Project Charter framing and BRD draft meeting
-## Context 
+## Meeting context 
 
 This first meeting is initiated by the IT Security Department of CHR Brussels, under the sponsorship of the Chief Information Officer (CIO), and facilitated by the Project Manager.
 
