--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.1 Business-Drivers-and-Problem-statement.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.1 Business-Drivers-and-Problem-statement.md
@@ -1,65 +1,93 @@
 # Business Drivers and Problem Statement
 
 ## Business Context
-CHR Brussels is responsible for delivering safe, high-quality patient care while operating under strict regulatory, privacy, and continuity-of-care obligations.
+The hospital relies on three core applications to support **the patient journey**:
 
-The hospital relies on three core applications to support the patient journey:
-- **DXPlanning** – patient appointment scheduling and specialist allocation,
-- **QBLOC** – surgical block planning, operating room allocation, consent tracking,
-- **OASIS+** – consolidation of the full patient record, clinical documentation, medical history and admission details.
+- **DXPlanning**: A comprehensive patient scheduling and specialist allocation system, managing appointment booking, cancellations, resource availability, and calendar synchronization. It supports efficient patient flow and reduces no-shows through automated reminders, while also interfacing with clinical information systems to ensure seamless access to patient data during scheduling and follow-up.
 
-Today, access to these systems is managed manually by IT on request. There is no centralized identity and access management platform, and user onboarding, role assignment, and deprovisioning are not automated.
+- **QBLOC**: A modular surgical block management solution designed to optimize operating room scheduling, resource allocation, and surgical team coordination. It includes pre-operative planning, per-operative data entry (such as procedure details, anesthesia, and medical consumables), consent tracking, and real-time visualization of operating room status. QBloc ensures rigorous traceability and timestamping of all surgical events, enabling audit compliance and operational performance analysis through integrated reporting and business intelligence tools.
 
-As clinical services scale and staffing models become more dynamic (rotation, on-call specialists, external consultants, temporary staff), this manual approach is no longer sustainable from a security, compliance, or operational efficiency standpoint.
+- **OASIS+**: An integrated clinical platform consolidating the full patient electronic record, including inpatient and outpatient clinical documentation, medical history, laboratory results, diagnostic information, and admission details. It enables healthcare providers to access up-to-date comprehensive patient information to support clinical decision-making, continuity of care, and regulatory reporting. The platform supports interoperability standards (such as HL7) enabling smooth exchanges with other hospital systems.
+
+Currently, access to these systems is managed manually by IT upon request. There is no centralized Identity and Access Management (IAM) platform, and user onboarding, role assignments, and deprovisioning processes are not automated.
+
+In addition, certain critical user roles require a robust centralized IAM ecosystem to address their unique access needs:
+
+- **Emergency physicians** who require immediate and uninterrupted access to specific systems in urgent situations, necessitating IAM processes that enable emergency access without compromising security.
+
+- **External contractors or IT technicians** who need temporary and strictly limited access for maintenance or support activities, supported by strong controls to ensure timely deprovisioning and enforcement of the principle of least privilege.
+
+- **Researchers** accessing pseudonymized patient data under strict compliance constraints, requiring fine-grained access controls that balance data protection with enabling research activities.
+
+These profiles introduce specific challenges that the IAM system must address to maintain security, compliance, and operational efficiency as clinical services expand and staffing models become more dynamic, including rotations, on-call specialists, external consultants, and temporary staff.
+
+As the hospital’s clinical services scale, the current manual access management approach is no longer sustainable from security, compliance, or operational efficiency perspectives. 
+Consequently, implementing a centralized, automated, and secure IAM solution is essential to meet present and future organizational needs.
 
 ---
 
 ## Problem Statement
-The hospital currently faces the following structural issues:
+The hospital currently faces several structural challenges regarding identity and access management:
 
-- **No end-to-end identity lifecycle control**  
-   Clinical user accounts are created and modified on demand. Accounts are often not revoked on time when a contract ends or a function changes. For administrative staff roles, user accounts are shared. 
+- **No end-to-end identity lifecycle control**
+  
+Clinical user accounts are created and modified manually on demand. Accounts are often not revoked promptly following contract termination or role changes. In some administrative areas, accounts may be shared, increasing risk.
 
-- **Lack of consistent access policies across systems**  
-  DXPlanning, QBLOC, and OASIS+ each apply their own logic for roles and permissions. There is no global view of “who has access to what, and why”.
+- **Lack of consistent access policies across systems**
 
-- **Insufficient authentication strength and session traceability**  
-  There is no single source of authentication with MFA, and it is difficult to prove who accessed patient data and under which level of authorization.
+DXPlanning, QBLOC, and OASIS+ each implement their own role and permission management logic, without a centralized view of “who has access to what, and why.”
 
-- **Regulatory exposure**  
-  The current model does not provide the level of auditability and accountability expected under GDPR, NIS2, ISO 27001, ISO 27799, or eHealth Belgium obligations (consent management, patient identity verification, professional identity binding for prescription).
+- **Insufficient authentication strength and session traceability**
 
-- **Operational risk for the patient journey**  
-  Errors in scheduling, incorrect admission, uncontrolled modification of surgical plans, or access to the wrong patient file can directly impact continuity of care and medical liability.
+There is no unified authentication source with multi-factor authentication (MFA) enforcement. It is challenging to prove who accessed sensitive patient data and with what level of authorization, jeopardizing accountability and traceability.
+
+- **Regulatory exposure**
+
+The existing IAM model does not meet auditability and accountability requirements demanded by GDPR, NIS2, ISO 27001, ISO 27799, and eHealth Belgium regulations, including consent management, patient identity verification, and professional binding for prescriptions.
+
+- **Operational risks impacting patient care**
+
+Errors in scheduling, admissions, surgical planning, or access to incorrect patient records present significant risks to continuity of care and medical liability.
+
+- **Specific challenges arising from critical user profiles:**
+
+  - **Emergency physicians** require immediate and uninterrupted access to critical systems during urgent situations, demanding IAM processes that allow fast emergency access while upholding security.
+
+  - **External contractors** and IT technicians need temporary, limited access for maintenance and support, requiring stringent controls for timely deprovisioning and least-privilege enforcement.
+
+  - **Researchers** accessing pseudonymized patient data operate under strict compliance constraints, necessitating fine-grained access controls to balance data protection and research needs.
+
+These issues collectively undermine the hospital’s ability to maintain a secure, compliant, and efficient IAM environment as clinical services grow more complex and staffing models become increasingly dynamic.
 
 ---
 
 ## Strategic Drivers
 The IAM program is driven by the following strategic needs:
 
-1. **Protect patient data and clinical integrity**  
-   Ensure that only the right person, with the right role, at the right time, can access or modify patient-related information.
+**1.** **Protect patient data and clinical integrity**
+   
+Ensure that only authorized individuals with the appropriate roles at the right time can access or modify patient-related information.
 
-2. **Support compliance and audit readiness**  
-   Be able to demonstrate, at any time, who had access to which dataset, under which justification, and for how long.
+**2.** **Support compliance and audit readiness**
+   
+Maintain the ability to demonstrate, at any time, who accessed which data, under what justification, and for how long, in accordance with GDPR, NIS2, ISO 27001, and other relevant healthcare regulations.
 
-3. **Reduce manual workload and human error**  
-   Automate provisioning, access assignment, and deprovisioning based on HR data coming from ULIS and Foederis.
+**3.** **Reduce manual workload and human error**
+   
+Automate user provisioning, access assignment, and deprovisioning based on HR data flows from ULIS and Foederis systems to improve operational efficiency and minimize risks.
 
-4. **Enable Zero Trust by design**  
-   Move away from implicit trust (“you’re on the network so you’re allowed”) to contextual, verified access with strong authentication and least privilege.
+**4.** **Implement Zero Trust architecture by design**
+   
+Transition from implicit trust models (e.g., "on the network means allowed") to contextual, verified access that enforces strong authentication and least privilege principles.
 
-5. **Stabilize mission-critical hospital operations**  
-   Secure the processes that define the patient journey:
-   - Appointment creation and modification,
-   - Patient admission and record lookup,
-   - Surgery planning and OR resource allocation,
-   - e-Prescription signing and compliance.
+**5.** **Stabilize mission-critical hospital operations**
+    
+Secure and streamline key processes that define the patient journey, including appointment creation and modification, patient admission and record lookup, surgical planning and operating room resource allocation, as well as e-prescription signing and regulatory compliance.
 
 ---
 
 ## Target IAM Capabilities
-To meet these drivers, CHR Brussels plans to implement an integrated IAM stack composed of:
+To meet these strategic drivers and based on advice provided by the IAM core team, CHR Brussels plans to implement the following integrated IAM stack:
 
 - **SailPoint (IGA)**  
   Identity Governance & Administration covering:
@@ -83,7 +111,7 @@ This stack has been selected for its ability to:
 - enforce least privilege,
 - improve traceability,
 - accelerate incident investigation,
-- and align with EU sovereignty and healthcare compliance expectations.
+- and comply with EU sovereignty and healthcare regulatory standards.
 
 ---
 
