--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.2 IAM-Solution-Mapping.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.2 IAM-Solution-Mapping.md
@@ -2,8 +2,9 @@
 
 ## Purpose
 
-This section defines how each IAM component — **SailPoint (IGA)**, **Okta (IDP)**, and **Wallix (PAM)** — addresses the functional and regulatory gaps identified in the risk analysis (Section 3.2).  
-The goal is to provide a clear functional mapping of IAM solutions across the hospital’s critical applications: **DXPlanning**, **OASIS+**, **QBLOC**, and **ePrescription/eHealth**.
+This section defines how each IAM component — **SailPoint (IGA), Okta (IDP), and Wallix (PAM)** — addresses the functional and regulatory gaps highlighted in the risk analysis (Section 2.1.4).
+Its objective is to provide a clear functional mapping of IAM solutions across the hospital’s critical applications: DXPlanning, OASIS+, QBLOC, and ePrescription/eHealth.
+﻿
 
 ---
 
