--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.2 IAM-Solution-Mapping.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.2 IAM-Solution-Mapping.md
@@ -10,8 +10,39 @@ Its objective is to provide a clear functional mapping of IAM solutions across t
 
 ## Overview of the IAM Architecture
 
-The CHR Brussels IAM program is designed around the **Zero Trust model**, ensuring that no user, system, or device is inherently trusted.  
 Access to patient-related data and clinical systems must be continuously verified, context-aware, and traceable.
+The CHR Brussels IAM program will be designed around the Zero Trust model, ensuring that no user, system, or device is inherently trusted.
+
+**1.** **Verify Explicitly**
+
+Every access request, whether from users, devices, or systems—whether inside or outside the hospital network must be thoroughly authenticated and authorized before granting access to patient data or clinical systems.
+
+**2.** **Use Least Privilege Access**
+
+Access rights are strictly limited to the minimal necessary privileges needed for each role. For example, doctors get time-limited access to relevant patient records, nurses have more restricted access, and administrative staff have only access required for their functions.
+
+**3.** **Assume Breach**
+
+The hospital network architecture assumes that breaches can and will occur. Continuous monitoring, segmentation, and strict access controls limit the lateral movement of attackers and reduce the impact of any compromise.
+
+**4.** **Context-Aware Access**
+
+Access decisions incorporate contextual factors such as user role, device health, location, time of day, and behavior patterns, reducing risks from stolen credentials or unauthorized devices.
+
+**5.** **Microsegmentation and Isolation**
+
+Hospital devices (including critical medical devices and Internet of Medical Things - IoMT) and systems are segmented and isolated on the network to prevent a single compromised device from exposing the entire infrastructure.
+
+**6.** **Continuous Monitoring and Analytics**
+
+Real-time monitoring of user activities, device posture, and network traffic helps detect anomalies early. Automated responses can temporarily block suspicious sessions or require re-authentication.
+
+**7.** **Comprehensive Logging and Audit**
+
+All access and actions are logged with fine granularity. This is essential not only for security incident investigations but also for compliance with healthcare regulations such as GDPR, NIS2, and eHealth Belgium.
+
+By applying these Zero Trust principles, CHR Brussels ensures that every user, device, and system interaction is validated and secured to protect the integrity and confidentiality of patient data, enable regulatory compliance, and maintain continuity of high-quality care.
+
 
 | **IAM Layer** | **Solution** | **Core Functionality** | **Integration Role** |
 |----------------|---------------|------------------------|----------------------|
