Update 3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md

--- a/03. Phase 2 - Design and validation/3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md
+++ b/03. Phase 2 - Design and validation/3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md
@@ -136,7 +136,7 @@ This table details the secured and auditable surgical planning process in QBLOC,
 |Surgery planning finalization| QBLOC finalizes plan including team, room, duration, auto dispatch notifications| Comprehensive, auditable surgery schedule with automatic updates|
 | Surgery scheduled| End event with surgery successfully scheduled | Reliable surgery planning with full traceability|
 
-## Process 4 - Medication prescription (ePrescription / OASIS+) 
+## Process 4 - Medication prescription & therapeutic link verification (e-prescription / OASIS+)
 Prescriptions are currently issued manually without strong authentication or automated therapeutic link verification.
 The process lacks digital signature enforcement, leading to potential identity misuse and non-compliance with eHealth and Recip-e standards.
 
