--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.2 IAM-Solution-Mapping.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.2 IAM-Solution-Mapping.md
@@ -56,10 +56,15 @@ By applying these Zero Trust principles, CHR Brussels ensures that every user, d
 
 | **Business Process** | **Primary Systems** | **IGA (SailPoint)** | **IDP (Okta)** | **PAM (Wallix)** |
 |-----------------------|--------------------|---------------------|----------------|------------------|
-| **1. Appointment Scheduling** | DXPlanning | Role-based access (secretaries, medical assistants) | SSO + MFA for all users | Vaulting of technical HL7 accounts |
-| **2. Patient Admission and Record Lookup** | OASIS+ | Access limited by function (reception, nurse, doctor) | Context-aware login (location/device) | Session recording for admin maintenance |
-| **3. Surgery Planning** | QBLOC | Delegated authorization for surgeons and chiefs | SSO federation between QBLOC and OASIS+ | Audit of privileged actions (schedule modifications) |
-| **4. Prescription and eHealth** | ePrescription / eID | Identity link between hospital user and eID | MFA and digital signature orchestration | Vaulted access to API and backend servers |
+|**1. Provisioning & Deprovisioning**|HRIS (ULIS, Foederis), All | Automated user lifecycle management, role-based access assignment, access certifications| Enforces user authentication, supports lifecycle-driven access changes | Monitors privileged account usage for integrations and admin actions | 
+| **2. Appointment Scheduling** | DXPlanning | Role-based access (secretaries, medical assistants) | SSO + MFA for all users | Vaulting of technical HL7 accounts |
+| **3. Patient Admission** | OASIS+ | Role-based access management for reception, nurses, doctors| Context-aware login, SSO, MFA | |
+| **4. Surgery Planning** | QBLOC | Delegated authorization for surgeons ensuring all sessions are recorded for auditability | SSO federation for QBLOC and OASIS+ | Auditable session recording for all surgical planning events|
+| **5. Medication prescription & Therapeutic link verification** | ePrescription, OASIS +| Identity lifecycle linked to prescriber roles, role certifications| MFA and digital signature orchestration | Vaulted access to API and backend servers |
+|**6. Priority & immediate Access for emergency Doctors** | DXPlanning, OASIS+, QBLOC| Temporary elevated roles with time-bound access workflows| Real-time adaptative authentication, context enforced emergency policy | Session monitoring and audit of emergency privileged access|
+| **7. Secure Access to segregated environments for researchers** | Research Environment Systems| Role and access segregation support, data access recertification| Enforced context-aware authentication, stricter policies for research network zones | restricts and audits privileged user sessions in production vs research environments| 
+|**8.Temporary Access for exterbal contractors** | Various | Time-limited provisioning and deprovisioning | Enforced strong, authentication, limited session duration| privileged session vaulting and recorded access during maintenance/support windows|
+
 
 ---
 
