--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.3 Business-Requirements-Matrix.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.3 Business-Requirements-Matrix.md
@@ -10,15 +10,20 @@ Each requirement ensures secure, compliant, and traceable management of identiti
 
 | **BR ID** | **Business Process** | **System / Application** | **Business Requirement** | **IAM Component** | **Regulatory Reference** | **Linked Risk ID** |
 |------------|---------------------|---------------------------|---------------------------|-------------------|---------------------------|--------------------|
-| **BR-001** | Appointment Scheduling | DXPlanning | Only authorized medical secretaries can create or modify appointments according to their functional department. | SailPoint (IGA) | GDPR Art.32 – Access Control | R-001 |
-| **BR-002** | Appointment Scheduling | DXPlanning | All DXPlanning users must authenticate via Okta SSO with MFA enforced. | Okta (IDP) | NIS2 Annex I – Authentication | R-002 |
-| **BR-003** | Appointment Scheduling / Inter-System Communication | DXPlanning ↔ OASIS+ ↔ QBLOC | All service accounts used for HL7 data exchanges between hospital systems (DXPlanning, OASIS+, QBLOC) must be vaulted and monitored within Wallix PAM to ensure credential protection, traceability, and prevention of unauthorized access. | Wallix (PAM) | ISO 27001 A.9.2.3 – Management of privileged access credentials | R-001 |
-| **BR-004** | Patient Admission | OASIS+ | Reception staff can only view fields relevant to admission and consent verification. | SailPoint (IGA) | GDPR Art.5 – Data Minimization | R-003 |
-| **BR-005** | Patient Admission | OASIS+ | Access to patient records requires contextual authentication (location, device, and time). | Okta (IDP) | NIS2 – Context-Aware Access | R-003 |
-| **BR-006** | Surgery Planning | QBLOC | Only surgeons, anesthetist & chiefs of service can approve or modify surgery schedules. Delegations must be traceable. | SailPoint (IGA) | ISO 27001 A.9.4.3 – Access Control | R-004 |
-| **BR-007** | Surgery Planning | QBLOC | All privileged operations in QBLOC must be session-recorded and auditable. | Wallix (PAM) | ISO 27001 A.12.4 – Event Logging | R-004 |
-| **BR-008** | Prescription Management | ePrescription / eHealth | Before any electronic prescription is issued, the practitioner must verify the patient’s therapeutic link via the patient’s eID card. Okta (IDP) must orchestrate this authentication step with the eHealth platform to ensure strong identity binding and non-repudiation. The final prescription must be digitally signed using the practitioner’s eID or eHealth certificate. | Okta (IDP) + SailPoint (IGA) + Wallix (PAM backend) | eHealth Belgium Framework, GDPR (Art.32 Integrity & Non-repudiation), ISO 27799 | R-005 |
-| **BR-009** | Prescription Management | ePrescription / eHealth | All privileged API and backend systems managing prescription data must be accessed only via vaulted, traceable privileged accounts. | Wallix (PAM) | NIS2 Annex I, ISO 27001 A.9.2.6 | R-005 |
+| **BR01** | Provisioning & deprovisioning | HRIS (ULIS, Foederis), all |Automate the creation, modification, and deletion of user access to limit human error and ensure least privilege| IGA (SailPoint)| GDPR Art.5, Art.32; ISO 27001 |R-001 |
+| **BR02** | Appointment Scheduling | DXPlanning | Only authorized medical secretaries can create or modify appointments according to their functional department. | SailPoint (IGA) | GDPR Art.32 – Access Control | R-001 |
+| **BR03** | Appointment Scheduling | DXPlanning | All DXPlanning users must authenticate via Okta SSO with MFA enforced. | Okta (IDP) | NIS2 Annex I – Authentication | R-002 |
+| **BR04** | Appointment Scheduling / Inter-System Communication | DXPlanning ↔ OASIS+ ↔ QBLOC | All service accounts used for HL7 data exchanges between hospital systems (DXPlanning, OASIS+, QBLOC) must be vaulted and monitored within Wallix PAM to ensure credential protection, traceability, and prevention of unauthorized access. | Wallix (PAM) | ISO 27001 A.9.2.3 – Management of privileged access credentials | R-001 |
+| **BR05** | Patient Admission | OASIS+ | Reception agents can only view fields relevant to admission and consent verification. | SailPoint (IGA) | GDPR Art.5 – Data Minimization | R-003 |
+| **BR06** | Patient Admission | OASIS+ | Access to patient records requires contextual authentication (location, device, and time). | Okta (IDP) | NIS2 – Context-Aware Access | R-003 |
+| **BR07** | Surgery Planning | QBLOC | Only surgeons, anesthetist, room coordinator & chiefs of service can approve or modify surgery schedules. Delegations must be traceable. | SailPoint (IGA) | ISO 27001 A.9.4.3 – Access Control | R-004 |
+| **BR08** | Surgery Planning | QBLOC | All privileged operations in QBLOC must be session-recorded and auditable. | Wallix (PAM) | ISO 27001 A.12.4 – Event Logging | R-004 |
+| **BR09** | Prescription Management | ePrescription / eHealth | Before any electronic prescription is issued, the practitioner must verify the patient’s therapeutic link via the patient’s eID card. Okta (IDP) must orchestrate this authentication step with the eHealth platform to ensure strong identity binding and non-repudiation. The final prescription must be digitally signed using the practitioner’s eID or eHealth certificate. | Okta (IDP) + SailPoint (IGA) + Wallix (PAM backend) | eHealth Belgium Framework, GDPR (Art.32 Integrity & Non-repudiation), ISO 27799 | R-005 |
+| **BR10** | Prescription Management | ePrescription / eHealth | All privileged API and backend systems managing prescription data must be accessed only via vaulted, traceable privileged accounts. | Wallix (PAM) | NIS2 Annex I, ISO 27001 A.9.2.6 | R-005 |
+| **BR11** | Priority & Immediate Access for Emergency Doctors| DXPlanning, OASIS+, QBLOC | Provide fast, controlled access to emergency services with traceability, while applying adaptive authentication mechanisms. |IGA (SailPoint), IDP (Okta), PAM (Wallix)|NIS2 Annex I, ISO 27001 A.9.2.6 | R-005 |
+| **BR12** | Secure Access to Segregated Environments for Researchers| Research Environments | Separate production and research environments, strictly control and audit privileged access| IGA (SailPoint), IDP (Okta), PAM (Wallix) | GDPR, ISO 27799, eHealth Belgium| R-005 |
+| **BR13** | Temporary Access for External Contractors | Various | Allow temporary limited access to external parties, with strong authentication and full auditing | IGA (SailPoint), IDP (Okta), PAM (Wallix) | NIS2, NIS2 | R-005 |
+
 
 ---
 
@@ -48,3 +53,4 @@ Each requirement ensures secure, compliant, and traceable management of identiti
 This Business Requirements Matrix establishes a unified view of the hospital’s IAM governance framework.  
 It ensures that each clinical operation — from appointment scheduling to prescription issuance — complies with Zero Trust principles and regulatory mandates.  
 The next phase (3.5) will define the **Success Criteria**, measuring how effectively these requirements mitigate risks and strengthen compliance posture.
+
