Update 3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md

--- a/03. Phase 2 - Design and validation/3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md
+++ b/03. Phase 2 - Design and validation/3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md
@@ -150,7 +150,7 @@ The process lacks digital signature enforcement, leading to potential identity m
 |Prescription issued by unauthenticated doctor| Masquerade by insiders | 
 |Manual validation of therapeutic link|User error |
 |No digital signature|Repudiation|
-|Lack of traceability for prescritpion Unauthorized use of a health information application|
+|Lack of traceability for prescritpion | Unauthorized use of a health information application |
 |Transmission without encryption|Communication interception|
 
 ### BPMN AS IS 
